<resources>
    <string name="app_name">TBG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_button_train">철도 버튼</string>
    <string name="main_button_bus">고속 버스 버튼</string>
    <string name="main_button_airplane">항공 버튼</string>
    <string name="travle_image">여행지 이미지</string>"
    <string name="jejudo_introduce">10월 추천! 제주도 관광 명소</string>
    <string name="yangyang_introduce">10월 추천! 제주도 관광 명소</string>
    <string name="notice_board">게시판</string>
    <string name="uploadButton_description">등록 버튼을 누르면\n게시글이 다른 사용자에게 노출됩니다!</string>
</resources>