<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@drawable/appbg"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/WelcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="이게 보이면 먼가잘못됨"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/WelcomeMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="새로운 여행을 시작해봐요!"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toBottomOf="@id/WelcomeMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/transportOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/WelcomeMessage2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- 이미지 버튼들 -->
            <ImageButton
                android:id="@+id/railwayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/train_button"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/main_button_train"
                app:layout_constraintWidth_percent="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/busButton"
                android:layout_margin="1dp" />

            <ImageButton
                android:id="@+id/busButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/bus_button"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/main_button_bus"
                app:layout_constraintWidth_percent="0.33"
                app:layout_constraintStart_toEndOf="@id/railwayButton"
                app:layout_constraintEnd_toStartOf="@id/airplaneButton"
                android:layout_margin="1dp" />

            <ImageButton
                android:id="@+id/airplaneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/airplane_button"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/main_button_airplane"
                app:layout_constraintWidth_percent="0.33"
                app:layout_constraintStart_toEndOf="@id/busButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="1dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/jejudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jejudo_introduce"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/transportOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/transportOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- 가로 스크롤 이미지들 -->
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle1"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle2"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle3"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle4"
                    android:padding="16dp"/>

            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/noticeboard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/noticeboard1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />

        <ImageView
            android:id="@+id/noticeboard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/noticeboard2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yangyang_introduce"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toBottomOf="@id/noticeboard1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/noticeboard1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- 가로 스크롤 이미지들 -->
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle5"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle6"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle7"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travle8"
                    android:padding="16dp"/>

            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
